--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="#contato" class="nav-link scroll-page">
                                     <span class="navItemText">
                                         Contato
                                     </span>
@@ -76,10 +76,13 @@
                                         Entrar
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownEntrar">
-                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou Empresa</a></li>
-                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou Motorista</a></li>
+                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou
+                                                Empresa</a></li>
+                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou
+                                                Motorista</a></li>
                                         <div class="horizontal-bar"></div>
-                                        <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar" href="cadastrar.html" role="navigation">Cadastrar-se</a></li>
+                                        <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar"
+                                                href="cadastrar.html" role="navigation">Cadastrar-se</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -98,10 +101,12 @@
                     <h1>Transportadora Mais Cargas</h1>
                     <h2>Encontre cargas, empresas e caminhoneiros</h2>
                     <div class="hero-botoes justify-content-xl-start justify-content-center">
-                        <a href="empresa.html" class="btn btn-danger hero-botoes-motorista anim-botao" role="navigation">
+                        <a href="motorista.html" class="btn btn-danger hero-botoes-motorista anim-botao"
+                            role="navigation">
                             Sou Motorista
                         </a>
-                        <a href="motorista.html" class="btn btn-secondary hero-botoes-empresa anim-botao" role="navigation">
+                        <a href="empresa.html" class="btn btn-secondary hero-botoes-empresa anim-botao"
+                            role="navigation">
                             Sou Empresa
                         </a>
                     </div>
@@ -139,7 +144,7 @@
                                     <div class="col-9">
                                         <div class="card-body">
                                             <h3 class="card-title">
-                                                Empresas anunciam suas cargas 
+                                                Empresas anunciam suas cargas
                                             </h3>
                                             <p class="card-text">
                                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
@@ -152,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="bg-pontos-vermelhos absolute d-xl-flex d-none"
-                                style="transform: translate(-280px, -40px);"></div>
+                                style="transform: translate(-230px, -30px)"></div>
                         </div>
                         <div class="col-12 justify-xl-content-start justify-content-center d-flex">
                             <div class="card sombra-caixa">
@@ -217,7 +222,7 @@
                             Números em constante crescimento
                         </h3>
                     </div>
-                    <div class="col-xl-4 col-12 d-flex">
+                    <div class="col-xl-4 col-12 d-flex hide bg-numeros-cards">
                         <div class="mx-auto">
                             <div class="card sombra-caixa">
                                 <div class="card-title mx-auto bg-numeros-icones">
@@ -232,7 +237,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-12 d-flex">
+                    <div class="col-xl-4 col-12 d-flex hide bg-numeros-cards">
                         <div class="mx-auto">
                             <div class="card sombra-caixa">
                                 <div class="card-title mx-auto bg-numeros-icones">
@@ -247,7 +252,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-12 d-flex">
+                    <div class="col-xl-4 col-12 d-flex hide bg-numeros-cards">
                         <div class="mx-auto">
                             <div class="card sombra-caixa">
                                 <div class="card-title mx-auto bg-numeros-icones">
@@ -268,64 +273,71 @@
     </section>
 
     <section>
-        <div class="container-fluid bg-carrosel">
-            
-                    <div id="carousel-ParaVoce" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carousel-ParaVoce" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carousel-ParaVoce" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carousel-ParaVoce" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                          </div>
-                        <div class="carousel-inner">
-                          <div class="carousel-item active" data-bs-interval="1000000">
-                            <img src="img/caminhoneiro2-vermelho.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-text">
-                                <h2>Para você, Motorista</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quo consequatur in voluptas quia.
-                                </p>
-                                <a href="motorista.html" class="btn btn-danger btn-saibaMais d-block mx-auto anim-botao">
-                                    SAIBA MAIS
-                                </a>
-                            </div>
-                          </div>
-                          <div class="carousel-item" data-bs-interval="10000">
-                            <img src="img/caminhoneiro3-vermelho.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-text">
-                                <h2>Para você, Empresa</h2>
-                                    <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quo consequatur in voluptas quia.
-                                    </p>
-                                    <a href="empresa.html" class="btn btn-danger btn-saibaMais d-block mx-auto anim-botao">
-                                        SAIBA MAIS
-                                    </a>
-                              </div>
-                          </div>
-                          <div class="carousel-item" data-bs-interval="10000">
-                            <img src="img/company-background.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-text">
-                                <h2>Faça sua cotação</h2>
-                                    <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quo consequatur in voluptas quia.
-                                    </p>
-                                    <a href="cotacao.html" class="btn btn-danger btn-saibaMais d-block mx-auto anim-botao">
-                                        SAIBA MAIS
-                                    </a>
-                              </div>
-                          </div>
-                        </div>
-                        <div id="carousel-butons">
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carousel-ParaVoce" data-bs-slide="prev" id="carousel-control-prev">
-                              <span><i class="fas fa-angle-left"></i></span>
-                              <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carousel-ParaVoce" data-bs-slide="next" id="carousel-control-next">
-                                <span><i class="fas fa-angle-right"></i></span>
-                              <span class="visually-hidden">Next</span>
-                            </button>
+        <div class="container bg-carrosel">
+            <div id="carousel-ParaVoce" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel-ParaVoce" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carousel-ParaVoce" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carousel-ParaVoce" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="5000">
+                            <img src="img/carrosel-motorista-vermelho.jpg" alt="" class="d-block w-100">
+                        <div class="carousel-text mx-auto d-block">
+                            <h2>Para você, Motorista</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quo consequatur
+                                in
+                                voluptas quia.
+                            </p>
+                            <a href="motorista.html" class="btn btn-danger btn-saibaMais d-block mx-auto anim-botao">
+                                SAIBA MAIS
+                            </a>
                         </div>
                     </div>
-    
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="img/carrosel-empresa-vermelho.jpg" alt="" class="d-block w-100 carousel-img">
+                        <div class="carousel-text">
+                            <h2>Para você, Empresa</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quo consequatur
+                                in
+                                voluptas quia.
+                            </p>
+                            <a href="empresa.html" class="btn btn-danger btn-saibaMais d-block mx-auto anim-botao">
+                                SAIBA MAIS
+                            </a>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="5000">
+                        <img src="img/carrosel-cotacao-vermelho.jpg" alt="" class="d-block w-100 carousel-img">
+                                <div class=" carousel-text">
+                        <h2>Faça sua cotação</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quo consequatur in
+                            voluptas quia.
+                        </p>
+                        <a href="cotacao.html" class="btn btn-danger btn-saibaMais d-block mx-auto anim-botao">
+                            SAIBA MAIS
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div id="carousel-butons">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel-ParaVoce"
+                    data-bs-slide="prev" id="carousel-control-prev">
+                    <span><i class="fas fa-angle-left"></i></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel-ParaVoce"
+                    data-bs-slide="next" id="carousel-control-next">
+                    <span><i class="fas fa-angle-right"></i></span>
+                    <span class="visually-hidden">Proximo</span>
+                </button>
+            </div>
         </div>
     </section>
 
@@ -356,7 +368,7 @@
 
     <footer>
         <div class="container-fluid bg-footer" style="padding: 0;">
-            <div class="container">
+            <div class="container" id="contato">
                 <div class="row">
                     <div class="col-xl-6 col-12 bg-footer-contato">
                         <div class="row">
