--- a/recuperar-motorista.html
+++ b/recuperar-motorista.html
@@ -49,7 +49,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="#contato" class="nav-link scroll-page">
                                     <span class="navItemText">
                                         Contato
                                     </span>
@@ -76,10 +76,13 @@
                                         Entrar
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownEntrar">
-                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou Empresa</a></li>
-                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou Motorista</a></li>
+                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou
+                                                Empresa</a></li>
+                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou
+                                                Motorista</a></li>
                                         <div class="horizontal-bar"></div>
-                                        <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar" href="cadastrar.html" role="navigation">Cadastrar-se</a></li>
+                                        <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar"
+                                                href="cadastrar.html" role="navigation">Cadastrar-se</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -96,6 +99,9 @@
                 <div class="row">
                     <div class="col-12">
                         <div>
+                            <h2>
+                                Recuperar senha
+                            </h2>
                             <div class="d-flex">
                                 <a href="#" class="btn btn-danger btn-loginout active souMotorista " type="submit" role="button"
                                     title="Enviar">
@@ -106,11 +112,8 @@
                                     Sou Empresa
                                 </a>
                             </div>
-                            <h2>
-                                Recuperar senha
-                            </h2>
                             <p>
-                                O MaisCargas enviará um <strong>SMS</strong> para verificar seu número de telefone. Você receberá um link de verificação.
+                                O MaisCargas enviará um link de verificação para o seu <strong>WHATSAPP</strong> para recuperar sua senha.
                             </p>
                             <form>
                                 <div class="row">
