--- a/cadastrar-empresa.html
+++ b/cadastrar-empresa.html
@@ -49,7 +49,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="#contato" class="nav-link scroll-page">
                                     <span class="navItemText">
                                         Contato
                                     </span>
@@ -76,10 +76,13 @@
                                         Entrar
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownEntrar">
-                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou Empresa</a></li>
-                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou Motorista</a></li>
+                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou
+                                                Empresa</a></li>
+                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou
+                                                Motorista</a></li>
                                         <div class="horizontal-bar"></div>
-                                        <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar" href="cadastrar.html" role="navigation">Cadastrar-se</a></li>
+                                        <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar"
+                                                href="cadastrar.html" role="navigation">Cadastrar-se</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -96,6 +99,9 @@
                 <div class="row">
                     <div class="col-12">
                         <div>
+                            <h2>
+                                Cadastrar
+                            </h2>
                             <div class="d-flex">
                                 <a href="cadastrar-motorista.html" class="btn btn-danger btn-loginout noActive souMotorista" type="submit" role="button"
                                     title="Enviar">
@@ -105,10 +111,7 @@
                                     title="Enviar">
                                     Sou Empresa
                                 </a>
-                            </div>
-                            <h2>
-                                Cadastrar
-                            </h2>
+                            </div>                           
                             <form>
                                 <div class="row">
                                     <div class="col-12">
@@ -170,7 +173,7 @@
                             </div>
                         </div>
                         <div class="justify-content-center d-flex">
-                            <a href="entrar-empresa.html" class="text-center loginout-infos">Já possui uma conta? Clique
+                            <a href="entrar-empresa.html" class="text-center loginout-infos" style="margin-bottom: 32px;">Já possui uma conta? Clique
                                 aqui para entrar</a>
                         </div>
                     </div>
@@ -183,7 +186,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
     <script src="js/waypoints.min.js"></script>
-    <script src="js/my.js"></script>
+    <script src="js/showPassword.js"></script>
 </body>
 
 </html>
