--- a/motorista.html
+++ b/motorista.html
@@ -49,7 +49,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="#contato" class="nav-link scroll-page">
                                     <span class="navItemText">
                                         Contato
                                     </span>
@@ -69,20 +69,20 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <!-- <a href="#" class="btn nav-link" type="button" role="button">
-                                    <span class="navItemText botao-entrar">
-                                        Entrar
-                                    </span>
-                                </a> -->
+                            <li class="nav-item" id="botao-entrar">
                                 <div class="dropdown">
                                     <button class="btn btn-secondary dropdown-toggle botao-entrar" type="button"
                                         id="dropdownEntrar" data-bs-toggle="dropdown" aria-expanded="false">
                                         Entrar
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownEntrar">
-                                        <li><a class="dropdown-item" href="#">Sou Empresa</a></li>
-                                        <li><a class="dropdown-item" href="#">Sou Motorista</a></li>
+                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou
+                                                Empresa</a></li>
+                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou
+                                                Motorista</a></li>
+                                        <div class="horizontal-bar"></div>
+                                        <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar"
+                                                href="cadastrar.html" role="navigation">Cadastrar-se</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -180,7 +180,7 @@
     </section>
 
     <section>
-        <div class="container-fluid bg-cadastrar">
+        <div class="container-fluid bg-cadastrar" style="margin-bottom: 120px;">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-12">
