--- a/nova_senha-empresa.html
+++ b/nova_senha-empresa.html
@@ -49,7 +49,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="#contato" class="nav-link scroll-page">
                                     <span class="navItemText">
                                         Contato
                                     </span>
@@ -76,10 +76,13 @@
                                         Entrar
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownEntrar">
-                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou Empresa</a></li>
-                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou Motorista</a></li>
+                                        <li><a class="dropdown-item" href="entrar-empresa.html" role="navigation">Sou
+                                                Empresa</a></li>
+                                        <li><a class="dropdown-item" href="entrar-motorista.html" role="navigation">Sou
+                                                Motorista</a></li>
                                         <div class="horizontal-bar"></div>
-                                        <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar" href="cadastrar.html" role="navigation">Cadastrar-se</a></li>
+                                        <li class="navbar-cadastrar"><a class="dropdown-item dropdown-cadastrar"
+                                                href="cadastrar.html" role="navigation">Cadastrar-se</a></li>
                                     </ul>
                                 </div>
                             </li>
